@@ -13,11 +13,19 @@
   <name>WWW-EEE Utilities - Serialization - Parser</name>
 
   <properties>
+    <jaxws-api.version>2.3.0</jaxws-api.version>
     <jooq.version>3.10.5</jooq.version>
     <jool.version>0.9.13</jool.version>
+    <jaxws-ri.version>2.3.0.2</jaxws-ri.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>javax.xml.ws</groupId>
+      <artifactId>jaxws-api</artifactId>
+      <version>${jaxws-api.version}</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jool</artifactId>
@@ -30,19 +38,13 @@
       <version>${jooq.version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-ri</artifactId>
+      <version>${jaxws-ri.version}</version>
+      <type>pom</type>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin><!-- FIXME Java 9 compat hack. -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.21.0</version>
-        <configuration>
-          <argLine>--add-opens=net.www_eee.util.serialization.parser/net.www_eee.util.serialization.parser.xml.soap=org.jooq</argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
